fix: Estilizar scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,6 @@
   --skills-border: rgba(81, 81, 81, 0.25);
   --h1: var(--secondary);
   --social-media: var(--light);
-
 }
 
 * {
@@ -39,6 +38,20 @@
 html {
   scroll-behavior: smooth;
 }
+body::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--darker);        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--primary);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid var(--darker);  /* creates padding around scroll thumb */
+}
+
 .content {
   min-height: 100vh;
   background-color: var(--bg);
